css/custom.css
.header {

    -webkit-print-color-adjust: exact;
    background: none repeat scroll 0% 0% #EEE;
    text-align: center;
    border-radius: 4px;
    font-size: 1rem;
    text-transform: uppercase;
    margin-bottom: 0.75rem;
    hight: 30px;
    line-height: 30px;
    font-weight: 600;
    letter-spacing: 0.1rem;
    overflow: hidden
    text-overflow: ellipsis


}

td.crop {
    max-width: 0;
    overflow:hidden;
    white-space:nowrap;
    text-overflow:ellipsis;
}

.daily {
    margin-right: auto;
    margin-left: 1rem;
}

.shift {
    display: table-cell;
}
td{
    width:9px;
    line-height: 0px;
    -webkit-print-color-adjust: exact;
}
.name{
    font-size: 1.3rem;
}

#worker1 {
    background: #89601B;
}
#worker2 {
    background: #EABD70;
}
#worker3 {
    background: #FE6410;
}
#worker4 {
    background: #094C37;
}
#worker5 {
    background: #5CCC89;
}
#worker6 {
    background: #674d67;
}
#worker7 {
    background: #BDBE25;
}

